--- a/Project2/Project2_BernaYenidogan.ipynb
+++ b/Project2/Project2_BernaYenidogan.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: Load your data, including testing/training split from Project 1\n",
+    "## Step 1: Loading the data, including testing/training split from Project 1\n",
     "Loading ecommerce data from kaggle (https://www.kaggle.com/prachi13/customer-analytics)\n",
     "\n",
     "Addressing any missing data issues."
@@ -963,16 +963,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cv_scores:\n",
+      "knn_cv_scores:\n",
       "[0.63409091 0.64488636 0.63181818 0.62727273 0.62876634]\n",
-      "cv_scores mean:\n",
+      "knn_cv_scores mean:\n",
       "0.633366905266422\n"
      ]
     }
@@ -982,14 +982,13 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
-    "\n",
     "knn= KNeighborsClassifier(n_neighbors=5)\n",
     "\n",
     "#5-fold cross validation\n",
-    "cv_scores = cross_val_score(knn, X_train_encoded, y_train, cv=5)\n",
+    "knn_cv_scores = cross_val_score(knn, X_train_encoded, y_train, cv=5)\n",
     "\n",
-    "print(\"cv_scores:\\n{}\".format(cv_scores))\n",
-    "print(\"cv_scores mean:\\n{}\".format(np.mean(cv_scores)))"
+    "print(\"knn_cv_scores:\\n{}\".format(knn_cv_scores))\n",
+    "print(\"knn_cv_scores mean:\\n{}\".format(np.mean(knn_cv_scores)))"
    ]
   },
   {
@@ -1001,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1057,7 @@
        "0.6385327198056724"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 337,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1076,7 @@
    "metadata": {},
    "source": [
     "### Step 4.2: RandomForestClassifier with the default parameters\n",
-    "Calculating accuracy for the training & test data using the default settings of Random Forrest Classifier"
+    "Calculating accuracy for the training & test data using the default settings of Random Forrest Classifier, without and with crossvalidation"
    ]
   },
   {
@@ -1108,6 +1107,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rf_cv_scores:\n",
+      "[0.67329545 0.64886364 0.66022727 0.65454545 0.65776009]\n",
+      "rf_cv_scores mean:\n",
+      "0.6589383818285183\n"
+     ]
+    }
+   ],
+   "source": [
+    "# https://towardsdatascience.com/building-a-k-nearest-neighbors-k-nn-model-with-scikit-learn-51209555453a\n",
+    "#Random Forest with 5-fold cross validation\n",
+    "rf_cv_scores = cross_val_score(forest, X_train_encoded, y_train, cv=5)\n",
+    "\n",
+    "print(\"rf_cv_scores:\\n{}\".format(rf_cv_scores))\n",
+    "print(\"rf_cv_scores mean:\\n{}\".format(np.mean(rf_cv_scores)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 273,
    "metadata": {},
    "outputs": [
@@ -1122,6 +1146,36 @@
    "source": [
     "#default value of n_estimators parameter\n",
     "print(forest.n_estimators)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.56      0.67      0.61       887\n",
+      "           1       0.74      0.65      0.69      1313\n",
+      "\n",
+      "    accuracy                           0.66      2200\n",
+      "   macro avg       0.65      0.66      0.65      2200\n",
+      "weighted avg       0.67      0.66      0.66      2200\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Calcuating the metrics precision, recall and f1\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "y_pred = cross_val_predict(forest, X_test_encoded, y_test, cv=5)\n",
+    "\n",
+    "print(classification_report(y_test, y_pred))"
    ]
   },
   {
@@ -1185,7 +1239,7 @@
     "n_neighbors = list(range(1,30))\n",
     "p=[1,2]\n",
     "#Convert to dictionary\n",
-    "hyperparameters = dict(leaf_size=leaf_size, n_neighbors=n_neighbors, p=p)\n",
+    "hyperparameters = dict(leaf_size=leaf_size, n_neighbors=n_neighbors, p=p, algorithm=\"BallTree\")\n",
     "\n",
     "#Create new KNN object\n",
     "knn_2 = KNeighborsClassifier()\n",
@@ -1317,13 +1371,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 296,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.55      0.72      0.62       887\n",
+      "           1       0.76      0.60      0.67      1313\n",
+      "\n",
+      "    accuracy                           0.65      2200\n",
+      "   macro avg       0.65      0.66      0.65      2200\n",
+      "weighted avg       0.68      0.65      0.65      2200\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# precision, recall and f1 of knn with n_neighbors=2, leaf_size=1, p=2 on testing data \n",
+    "# precision, recall and f1 of knn with n_neighbors=8, leaf_size=1, p=2 on testing data \n",
     "from sklearn.metrics import classification_report\n",
-    "print(classification_report(y_test, knn3.predict(X_test_encoded)))\n",
+    "print(classification_report(y_test, knn4.predict(X_test_encoded)))\n",
     "\n",
     "#from sklearn.metrics import roc_auc_score\n",
     "#y_pred = cross_val_predict(knn, X_test_encoded, y_test, cv=5)\n",
@@ -1537,13 +1607,156 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 5.2: Generating GridSearch to find the best value of the parameters 'n_estimators' and 'max_depth' for Random Forest Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'n_estimators': [100, 200, 300, 400, 500], 'max_depth': [10, 20, 30, 40, 50, None], 'max_features': ['sqrt']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Number of trees in random forest\n",
+    "n_estimators = [int(x) for x in np.linspace(start = 100, stop = 500, num = 5)]\n",
+    "# Number of features to consider at every split\n",
+    "max_features = ['sqrt']\n",
+    "# Maximum number of levels in tree\n",
+    "max_depth = [int(x) for x in np.linspace(10, 50, num = 5)]\n",
+    "max_depth.append(None)\n",
+    "\n",
+    "# Create the random grid\n",
+    "forest_grid = {'n_estimators': n_estimators,\n",
+    "                'max_depth': max_depth,\n",
+    "                'max_features': max_features}\n",
+    "print(forest_grid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 325,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 10 folds for each of 30 candidates, totalling 300 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 300 out of 300 | elapsed:  8.6min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best n_estimators: 100\n",
+      "Best max_depth: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Create new forest object\n",
+    "forest_2 = RandomForestClassifier(random_state=2)\n",
+    "\n",
+    "#Use GridSearch\n",
+    "forest_grid = GridSearchCV(forest_2, forest_grid, cv=10, verbose=1)\n",
+    "\n",
+    "#Fit the model\n",
+    "forest_best_model = forest_grid.fit(X_train_encoded, y_train)\n",
+    "\n",
+    "#Print The value of best Hyperparameters\n",
+    "print('Best n_estimators:', forest_best_model.best_estimator_.get_params()['n_estimators'])\n",
+    "print('Best max_depth:', forest_best_model.best_estimator_.get_params()['max_depth'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 326,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6748487434067638\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(forest_best_model.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 327,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "randomforest score: 0.6690909090909091\n"
+     ]
+    }
+   ],
+   "source": [
+    "# accuracy of n_estimators: 100, max_depth: 10 on testing data \n",
+    "forest_3 = RandomForestClassifier(n_estimators=100, max_depth=10, random_state=2)\n",
+    "\n",
+    "forest_3.fit(X_train_encoded, y_train)\n",
+    "\n",
+    "print(\"Randomforest score: {}\".format(forest_3.score(X_test_encoded, y_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 328,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.56      0.85      0.67       887\n",
+      "           1       0.84      0.55      0.66      1313\n",
+      "\n",
+      "    accuracy                           0.67      2200\n",
+      "   macro avg       0.70      0.70      0.67      2200\n",
+      "weighted avg       0.73      0.67      0.67      2200\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# precision, recall and f1 of randomforestclassifier with n_estimators: 100, max_depth: 10 on testing data \n",
+    "print(classification_report(y_test, forest_3.predict(X_test_encoded)))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "### Step 5.2: Generating GridSearch to find the best value of the parameters \"n_neighbors\", \"leaf_size\" and \"p\" for KNN"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -1551,18 +1764,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.6"
   }
  },
  "nbformat": 4,
